--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "mockjs": "^1.0.1-beta3",
     "normalize.css": "^8.0.1",
     "vue": "^2.5.21",
     "vue-router": "^3.0.2"
