--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "element-ui": "^2.4.11",
     "mockjs": "^1.0.1-beta3",
     "normalize.css": "^8.0.1",
+    "pug": "^2.0.3",
+    "pug-plain-loader": "^1.0.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "vue": "^2.5.21",
     "vue-router": "^3.0.2"
   },
